# FLP-Haskell-proj

./: CHANGELOG.md  Makefile  README.md  neuralNetworksProj.cabal
configs/: iris_big.conf  iris_ce.conf  iris_id.conf  iris_relu.conf  iris_small.conf  iris_tanh.conf  mnist_42000.conf  mnist_big.conf  mnist_small.conf
docs/: README.md
src/: Activations.hs  Experiments.hs  LinearLayer.hs  LossFunction.hs  Main.hs  NeuralNetwork.hs  ParseConfig.hs  ParseInput.hs  Types.hs
