cabal-version:      2.4
name:               neuralNetworksProj
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Ondra Odehnal
maintainer:         OndrejOdehnal42@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable neuralNetworksProj
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        Activations
        Types
        LossFunction
        NeuralNetwork
        ParseInput
        Experiments

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
      base ^>=4.15.1.0,
      hmatrix ^>= 0.20.2,
      parsec ^>= 3.1.14.0,
      random ^>= 1.2.1.1,
      array ^>= 0.5.4.0 
    hs-source-dirs:   src 
    default-language: Haskell2010
